fix(compare helper notification): trunkate if text does not fit

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@
     -ms-user-select: none;
     user-select: none;
     -webkit-appearance: none;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 65%;
 }
 
 .error {
